--- a/assets/CSS/styleOtherPages.css
+++ b/assets/CSS/styleOtherPages.css
@@ -45,7 +45,7 @@ header .container {
 }
 
 header h1 {
-    margin: 0;
+    margin-top: 30px;
     font-size: 2.2rem; /* Smaller title as requested */
     font-weight: 700;
     text-align: center;
