--- a/assets/CSS/styleOtherPages.css
+++ b/assets/CSS/styleOtherPages.css
@@ -288,6 +288,12 @@ footer {
     margin-top: auto;
 }
 
+#tituloNome {
+    padding: 20px;
+    text-align: center;
+    color: var(--primary-color);
+}
+
 @media (max-width: 768px) {
     header h1 {
         font-size: 1.8rem;
