--- a/assets/CSS/styleOtherPages.css
+++ b/assets/CSS/styleOtherPages.css
@@ -294,6 +294,57 @@ footer {
     color: var(--primary-color);
 }
 
+#graficos {
+    background-color: #FAFAFA;
+    margin: 30px auto;
+    border: 2px solid var(--accent-color);
+    display: flex;
+    flex-direction: column;
+    align-items: center; /* centraliza as divs internas horizontalmente */
+    gap: 40px; /* espaço entre os gráficos */
+    padding: 20px;
+    box-sizing: border-box;
+}
+
+#graficos {
+    background-color: #FAFAFA;
+    margin: 30px; /* Use margins to provide space from the screen edges */
+    border: 2px solid var(--accent-color);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 40px;
+    padding: 20px;
+    box-sizing: border-box;
+    width: 100%; /* Allows the container to grow */
+    max-width: 600px; /* Set a maximum width for the container */
+}
+
+#graficos div {
+    width: 100%; /* Allow internal divs to fill the available space */
+    display: flex;
+    flex-direction: column;
+    align-items: center; 
+}
+
+#graficos canvas {
+    max-width: 100%; /* Let the canvas grow up to the width of its parent */
+    max-height: 200px;
+}
+
+#divGraficos {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    margin: 0;
+}
+
+#sectionContas ul {
+    list-style-type: disc;
+    font-size: 110%;
+}
+
 @media (max-width: 768px) {
     header h1 {
         font-size: 1.8rem;
